--- a/src/assets/style/_common.scss
+++ b/src/assets/style/_common.scss
@@ -113,10 +113,10 @@
     }
 
     .ReactTable .rt-tr-group .rt-tr .rt-td:nth-child(5) {
-        text-align: center;
+        // text-align: center;
     }
     .ReactTable .rt-tr-group .rt-tr .rt-td:nth-child(6) {
-        text-align: center;
+        // text-align: center;
     }
     .table {
         margin-bottom: 0px !important;
@@ -172,6 +172,7 @@
             align-items: center;
         }
     }
-
-
+}
+.ReactTable .rt-thead .rt-tr {
+    text-align: left !important;
 }
