--- a/src/assets/style/_images.scss
+++ b/src/assets/style/_images.scss
@@ -3,4 +3,5 @@
     height: 25px;
     border-radius: 100%;
     margin-right: 10px;
+    background: #ebebeb;
 }
